# alfredo

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  skills-lock.json  vitest.config.ts
.claude/skills/: managing-tauri-app-resources
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
designs/: agent-message-format.html  agent-review-comments.html  changes-review-redesign.html  changes-tab-consolidation.html  changes-view-tabs-redesign.html  demo-main-screen.html  discard-changes.html  dnd-highlight-styles.html  kit.css  multi-repo-footer.html  multi-repo-pills-vs-rail.html  multi-repo-sidebar.html  open-in-editor-terminal.html  pr-comment-distinction.html  pr-panel-persistent.html  pr-panel-sidebar-stats.html  resizable-panels-widths.html  settings-polish.html  settings-redesign.html  sidebar-redesign-attention.html  sidebar-redesign-multi-repo.html  sidebar-redesign-repo-selector.html  sidebar-redesign-themes.html  split-view-and-expand-context.html  thinking-state-dynamic.html  thinking-with-server.html
src/: App.tsx  api.ts  main.tsx  types.ts
src-tauri/: .taurignore  Cargo.toml  build.rs  deny.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_detector.rs  app_config_manager.rs  branch_manager.rs  config_manager.rs  git_manager.rs  github_manager.rs  github_sync.rs  keychain.rs  lib.rs  linear_manager.rs  linear_oauth.rs  main.rs  patch_parser.rs  platform.rs  pty_manager.rs  stack_manager.rs  state_server.rs  types.rs
src-tauri/src/commands/: agents.rs  app_config.rs  branch.rs  checks.rs  config.rs  diff.rs  external_tools.rs  github.rs  github_auth.rs  linear.rs  linear_oauth.rs  mod.rs  pr_detail.rs  pty.rs  repo.rs  session.rs  setup_script_dialog.rs  worktree.rs
src/components/: Logo.tsx
src/hooks/: useAppConfig.ts  useChangesData.ts  useDensity.ts  useDiffSearch.ts  useFileNavigation.ts  useGithubSync.ts  useKeyboardShortcuts.ts  useNotifications.ts  usePrData.ts  usePty.test.ts  usePty.ts  useRepoPath.ts  useSendToClaude.ts  useServer.ts  useUpdater.ts  (+1 more)
(+204 files in other folders)
