[package]
name = "alfredo"
version = "0.1.0"
description = "AI Agent Management Desktop App"
authors = ["Chloe"]
edition = "2021"

[lib]
name = "alfredo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
portable-pty = "0.9"
git2 = "0.19"
octocrab = { version = "0.41", default-features = false, features = ["default-client", "follow-redirect", "retry", "timeout", "tracing", "opentls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
axum = "0.8"
thiserror = "2"
libc = "0.2"
chrono = { version = "0.4.44", features = ["serde"] }

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
cloned_instead_of_copied = "warn"
manual_string_new = "warn"
implicit_clone = "warn"
uninlined_format_args = "warn"

[dev-dependencies]
tempfile = "3"
